# ProjectParsnip

./: .gitignore  .pre-commit-config.yaml  CodeStyling.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml  javascript-lint-check.yml  python-tests.yml  react-tests.yml
backend/: .flake8  Dockerfile  README.md  alembic.ini  gunicorn_conf.py  pyproject.toml  requirements.txt  sqlCode.sql  sql_app.db
backend/app/: api.py  authentication.py  database.py  email.py  models.py  notifications.py  schemas.py  settings.py  users.py
backend/app/router/: authentication.py  devices.py  grow_properties.py  grow_property_types.py  imgutils.py  notifications.py  plant_data.py  plant_profiles.py  plant_types.py  plants.py  sensors.py  users.py  utils.py
backend/app/tests/: conftest.py  populate_tests.py  test_api.py  test_auth.py  test_devices.py  test_grow_properties.py  test_grow_property_types.py  test_notifications.py  test_plant_data.py  test_plant_profiles.py  test_plant_types.py  test_plants.py  test_sensors.py  test_users.py
backend/migrations/: env.py
backend/migrations/versions/: 0e2e991a419e_add_device_auth_to_model.py  2f980c1bf945_add_token_uuid.py  6f1175ef1088_removed_test_migration.py  75ffadd57328_test_migration.py  87ea48a33692_merge_migrations_2f98_and_75ff.py  9459427909ee_added_notification_model.py  d35247d12574_init.py  dbc28842216c_removed_test_migration.py  e1cb5aab3dcb_first_migration.py  fc23c5096b5e_fixed_notification_relation.py
frontend/: .eslintrc.json  App.js  App.jsx  Dockerfile  README.md  app.json  babel.config.js  jest-setup.js  jest.setup.js  package-lock.json  package.json
frontend/src/: App.js  readme.md
frontend/src/api/: API.js
frontend/src/components/: AdditionDialog.jsx  AuthBtns.jsx  CardSensors copy.jsx  CardSensors.jsx  CheckAPIConnection.jsx  CloseBtn.jsx  CreatePlantForm.jsx  CreatePlantProfileForm.jsx  CustomSearchDropdown.jsx  DeviceDetailsInfo.jsx  DeviceDetailsSensors.jsx  DevicesCard.jsx  DevicesEditForm.jsx  EditPlantForm.jsx  EditPlantProfileForm.jsx  GrowPropertyChart.jsx  ImageBackgroundBlob.jsx  LoginForm.jsx  NotificationBox.jsx  PlantInfoTable.jsx  ProfilePicture.jsx  SensorsListCard.jsx  SignUpForm.jsx  UsersPlantProfilesTable.jsx  WarningDialog.jsx
frontend/src/navigation/: BottomTabNavigation.jsx  Header.jsx  NavigationRoot.jsx
frontend/src/screens/: notes.md
frontend/src/stylesheets/: DarkTheme.js  LightTheme.js  defaultTheme.js  paperTheme.js
frontend/src/utils/: SensorIcons.jsx  localStorage.js
hardware/: Doxyfile  README.md  captiveRequest.ino  platformio.ini  test_esp32.cpp  tree.html
hardware/documentation/html/: _derived_lora_sensor_8cpp.html  _derived_lora_sensor_8h.html  _derived_lora_sensor_8h_source.html  _device_8cpp.html  _device_8h.html  _device_8h_source.html  _device_e_s_p32_8cpp.html  _device_e_s_p32_8h.html  _device_e_s_p32_8h_source.html  _device_e_s_p8266_8cpp.html  _device_e_s_p8266_8h.html  _device_e_s_p8266_8h_source.html  _device_server_interface_8cpp.html  _device_server_interface_8h.html  _device_server_interface_8h_source.html  _device_transmitter_8cpp.html  _device_transmitter_8h.html  _device_transmitter_8h_source.html  _light_sensor_8cpp.html  _light_sensor_8h.html  _light_sensor_8h_source.html  _lora_sensor_8cpp.html  _lora_sensor_8h.html  _lora_sensor_8h_source.html  _lora_sensor_transmitter_8cpp.html  _lora_sensor_transmitter_8h.html  _lora_sensor_transmitter_8h_source.html  _moisture_sensor_8cpp.html  _moisture_sensor_8h.html  _moisture_sensor_8h_source.html  _r_e_a_d_m_e_8md.html  _sensor_8h.html  _sensor_8h_source.html  _temperature_sensor_a_h_t_x_8cpp.html  _temperature_sensor_a_h_t_x_8h.html  _temperature_sensor_a_h_t_x_8h_source.html  _temperature_sensor_d_h_t_8cpp.html  _temperature_sensor_d_h_t_8h.html  _temperature_sensor_d_h_t_8h_source.html  _transmitter_8h_source.html  (+89 more)
hardware/esp32/: platformio.ini
hardware/esp32/src/: main.cpp  (+1 more)
hardware/esp8266/: platformio.ini
hardware/main/: main.ino  test.yml
hardware/partition_tables/: custom_partitions.csv
hardware/transmitter/: FinalTransmitter.ino
(+314 files in other folders)
