[tool.poetry]
name = "projectparsnip"
version = "0.1.0"
description = ""
authors = [
    "Steven Taylor <sc18sst@leeds.ac.uk>",
    "Sean Nelson <ll17s2n@leeds.ac.uk>",
    "Farnaaz Ghazaani <sc18fg@leeds.ac.uk>",
    "Stuart Dingwell <sc19sjjd@leeds.ac.uk>",
    "Jaymeson Heller <sc19jh@leeds.ac.uk>",
    "Shubham Tandale <sc19st@leeds.ac.uk>",
    "Aimee Boyle <sc18a3b@leeds.ac.uk>",
    "Omar Hashish <sc19orss@leeds.ac.uk>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
fastapi-users = { extras = ["sqlalchemy"], version = "^10.2.1" }
gunicorn = "^20.0.4"
uvicorn = "^0.20.0"
aiosqlite = "^0.17.0"
httpx = "^0.23.1"
pydantic = "^1.10.4"
sqlalchemy = { extras = ["asyncio"], version = "^1.4.46" }
asgi-lifespan = "^2.0.0"
dependency = "^0.0.3"
alembic = "^1.9.3"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
black = "^22.3.0"
isort = "^5.10.1"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
pytest-order = "^1.0.1"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
